Mon Oct 22 12:11:13 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:

          Documented variable scopes.

        * modules/ProjectCreator.pm:

          Fixed a bug where any type of error in a base feature project
          would be reported as if the end of the feature project was not
          found.

          Also, fixed a bug where a scoped template variable addition would
          be evaluated multiple times resulting in a repeition of the added
          value.

Thu Oct 11 17:42:54 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc8csharp.mpd:

          Fixed a problem where too many .resx files were being grouped to a
          "matching" 'Form' source file.

Thu Oct 11 15:34:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:

          Document a requirement of a <%foreach%> that uses a function call
          with commas.  In this case a variable name and base count is
          necessary.

        * docs/templates/make.txt:

          Documented missing template variables.

        * modules/TemplateParser.pm:

          Modified the 'remove_from' template function to work in a foreach
          and to allow better string manipulation.

        * templates/vc8csharp.mpd:

          Use the 'remove_from' function to group .resx files that fully or
          partially match a 'Form' source file.

Tue Sep 25 16:03:41 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * templates/vc8csharp.mpd:

          Changed the way generates_source works.  See the README for more
          details.

Thu Sep 13 18:02:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * create_base.pl:

          Added a script to create base projects based on MPC library
          projects.

        * modules/ProjectCreator.pm:

          Changed an informational message to provide more data.

Wed Sep 12 18:55:35 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
